bwaf_cft_1_instance_NEW_vpc_payg.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Barracuda WAF PAYG 1 instance, new VPC, 1 interface ( aka WAF on a stick ) **WARNING** This template creates an Amazon EC2 instance. You will be billed for the resources used if you create a stack from this template! The initial password is admin/<instanceid>.  The WAF will have 1 interface with a public ip which is used for both management and ingress/egress traffic.  Check the outputs at the end of stack creation for the public IP and DNS name.  A security group will be create [...]
	
	
	
	
	
	
	
	
	
	
	
	"Parameters": {
	   "EnvironmentName": {
         "Description": "An environment name that is prefixed to resource names",
		 "Default": "BWAF",
         "Type": "String"
		},
		"InstanceType": {
			"Description": "EC2 instance type",
			"Type": "String",
			"Default": "t2.medium",
			"AllowedValues": [
				"t2.medium",
				"m4.large"
			]
		},
		"secGroupSrcCIDR": {
			"Description": "Src IP CIDR for inbound security group for ports 8000/8443/80/443/8080",
			"Type": "String",
			"MinLength": "9",
			"MaxLength": "18",
			"Default": "0.0.0.0/0",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x."
		},
		"VpcCIDR": {
			"Description": "Subnet for the new VPC ( *** must not conflict with existing subnets *** ) ",
			"Type": "String",
			"Default": "10.0.0.0/16",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Use valid CIDR notation"
		},
		"subNetCIDR": {
			"Description": "Private subnet within the VPC address space. ",
			"Type": "String",
			"Default": "10.0.1.0/24",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
		}
	},
		
	
	
	
	
	"Mappings": {
		"RegionMap": {
			"us-east-1": {				"ImageID": "ami-02ba799fdb5fda694"			},
			"eu-north-1": {				"ImageID": "ami-0d743518c57557a7f"			},
			"ap-south-1": {				"ImageID": "ami-049ddfff171e18266"			},
			"eu-west-3": {				"ImageID": "ami-0596e2065cd63c027"			},
			"eu-west-2": {				"ImageID": "ami-024254e7df69f666c"			},
			"eu-west-1": {				"ImageID": "ami-0c2ee20b4d2005675"			},
			"ap-northeast-2": {			"ImageID": "ami-0afbe401dbdb9a282"			},
			"ap-northeast-1": {			"ImageID": "ami-0843e2a08adf5a2bb"			},
			"sa-east-1": {				"ImageID": "ami-05b3d0dfa89c7dec6"			},
			"ca-central-1": {			"ImageID": "ami-01cba513c0e5efe2b"			},
			"ap-southeast-1": {			"ImageID": "ami-0e746d3a5b665a6fb"			},
			"ap-southeast-2": {			"ImageID": "ami-00ae25082320f2b00"			},
			"eu-central-1": {			"ImageID": "ami-0dcdd8046df8e35bf"			},
			"us-east-2": {				"ImageID": "ami-063bad96bd053da6e"			},
			"us-west-1": {				"ImageID": "ami-0a9b9407fc6bb2a73"			},
			"us-west-2": {				"ImageID": "ami-07a03990a907dea03"			}
		}
	},
	
	
	
	
	
	
	
	
	
	
	
	"Resources": {
		

		
		"myVPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VpcCIDR"
				},
				"EnableDnsSupport": "true",
				"EnableDnsHostnames": "true",
				"Tags": [
				{
                  "Key": "Name",
                  "Value": { "Ref": "EnvironmentName" }
				   }
				]
			}
		},
		"mySubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"CidrBlock": {
					"Ref": "subNetCIDR"
				},
				"Tags": [
				{
                  "Key": "Name",
                  "Value": { "Ref": "EnvironmentName" }
				   }
				]
			}
		},
		"myRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"Tags": [
				{
                  "Key": "Name",
                  "Value": { "Ref": "EnvironmentName" }
				   }
				]
			}
		},
		"myInternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
				{
                  "Key": "Name",
                  "Value": { "Ref": "EnvironmentName" }
				   }
				]
			}
		},
		"InternetGatewayAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"DependsOn" : "myInternetGateway",
			"Properties": {
				"VpcId": {
					"Ref": "myVPC"
				},
				"InternetGatewayId": {
					"Ref": "myInternetGateway"
				}
			}
		},
		"myRoute" : {
		   "Type" : "AWS::EC2::Route",
		   "DependsOn" : "InternetGatewayAttachment",
		   "Properties" : {
			  "RouteTableId" : { "Ref" : "myRouteTable" },
			  "DestinationCidrBlock" : "0.0.0.0/0",
			  "GatewayId" : { "Ref" : "myInternetGateway" }
		   }
		},
		"mySubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "mySubnet"
				},
				"RouteTableId": {
					"Ref": "myRouteTable"
				}
			}
		},
		
		
		"EC2Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"InstanceType": {
					"Ref": "InstanceType"
				},
				"NetworkInterfaces": [
					{
						"DeviceIndex": "0",
						"AssociatePublicIpAddress": true,
						"SubnetId": {
							"Ref": "mySubnet"
						},
						"GroupSet": [
							{
								"Fn::GetAtt": [
									"BWAFsecGroup",
									"GroupId"
								]
							}
						]
					}
				],
				"ImageId": {
					"Fn::FindInMap": [
						"RegionMap",
						{
							"Ref": "AWS::Region"
						},
						"ImageID"
					]
				},
				"Tags": [
				{
                  "Key": "Name",
                  "Value": { "Ref": "EnvironmentName" }
				   }
				]				
			}
		},
	







		"BWAFsecGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security rule group for the Barracuda WAF",
				"VpcId": {
					"Ref": "myVPC"
				},
				"Tags": [
				{
                  "Key": "Name",
                  "Value": { "Ref": "EnvironmentName" }
				   }
				]				
			}
		},
		"BWAFsecRule1": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "BWAFsecGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": "8000",
				"ToPort": "8000",
				"CidrIp": {
					"Ref": "secGroupSrcCIDR"
				}
			}
		},
		"BWAFsecRule2": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "BWAFsecGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": "8443",
				"ToPort": "8443",
				"CidrIp": {
					"Ref": "secGroupSrcCIDR"
				}
			}
		},
		"BWAFsecRule3": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "BWAFsecGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": "80",
				"ToPort": "80",
				"CidrIp": {
					"Ref": "secGroupSrcCIDR"
				}
			}
		},
		"BWAFsecRule4": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "BWAFsecGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": "443",
				"ToPort": "443",
				"CidrIp": {
					"Ref": "secGroupSrcCIDR"
				}
			}
		},
		"BWAFsecRule5": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "BWAFsecGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": "8080",
				"ToPort": "8080",
				"CidrIp": {
					"Ref": "secGroupSrcCIDR"
				}
			}
		}
	},





	"Outputs": {
		"PublicDNSName": {
			"Description": "Public DNS name of the new EC2 instance",
			"Value": {
				"Fn::GetAtt": [
					"EC2Instance",
					"PublicDnsName"
				]
			}
		},
		"PublicIPAddress": {
			"Description": "Public IP address of the new EC2 instance",
			"Value": {
				"Fn::GetAtt": [
					"EC2Instance",
					"PublicIp"
				]
			}
		}
	}
}
